--- a/q_config.json
+++ b/q_config.json
@@ -1,7 +1,7 @@
 {
   "embeddings": [
     {
-      "tensorName": "My tensor",
+      "tensorName": "Quran Vectors",
       "tensorShape": [
         1000,
         50
